--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,27 +42,31 @@ h3 {
 }
 
 .data-tip {
-  padding: 20px;
-  text-align: center;
   margin-top: 50px;
-  background-color: rgb(96, 96, 96);
-  color: #fff;
-  font-weight: 300;
   margin-bottom: 50px;
-  box-shadow: 2px 2px 2px 2px rgb(178, 178, 178);
+  text-align: center;
 }
 
-.btn {
-  width: 100%;
-  padding: 15px;
+button {
+  background-color: #cccccc;
+  color: #000;
+  border: 1px solid #cccccc;
 }
 
-.btn h3:hover {
-  transform: scale(1.5);
+button:hover {
+  background-color: rgb(94, 94, 94);
+  color: #fff;
 }
 
 .custom-chart {
   margin-bottom: 40px;
+}
+
+div#attacker_size,
+div#defender_size,
+div#attacker_king,
+div#defender_king {
+  margin-top: 80px;
 }
 
 #footer {
@@ -89,13 +93,6 @@ h3 {
   pointer-events: none; /* MUY IMPORTANTE! */
   font-family: sans-serif;
   font-size: 12px;
-}
-
-div#attacker_size,
-div#defender_size,
-div#attacker_king,
-div#defender_king {
-  margin-top: 80px;
 }
 
 path.link {
