--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,12 +16,12 @@ h3 {
 }
 
 .header-section {
-  padding-top: 0;
-  width: 100%;
-  min-height: 500px;
 }
 
 .wave {
+  padding-top: 0;
+  width: 100%;
+  min-height: 500px;
   position: relative;
   background-image: url(../images/GoT.jpg);
   background-color: rgba(162, 162, 162, 0.5%);
@@ -39,6 +39,10 @@ h3 {
   background: url(../images/wave.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.image-got-giff {
+  width: 100%;
 }
 
 .data-tip {
@@ -67,6 +71,10 @@ div#defender_size,
 div#attacker_king,
 div#defender_king {
   margin-top: 80px;
+}
+
+iframe {
+  width: 100%;
 }
 
 #footer {
@@ -110,4 +118,7 @@ path.link.loss {
 
 iframe {
   border: 0;
+}
+
+@media screen and (max-width: 911px) {
 }
