--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,10 +23,10 @@ h3 {
   width: 100%;
   min-height: 500px;
   position: relative;
-  background-image: url(../images/GoT.jpg);
+  background: url(../images/GoT.jpg);
   background-color: rgba(162, 162, 162, 0.5%);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 .wave:before {
