--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,9 +116,23 @@ path.link.loss {
   stroke: #ca0020;
 }
 
-iframe {
-  border: 0;
+.mobile-view {
+  display: none;
 }
 
-@media screen and (max-width: 911px) {
+iframe {
+  border: 0;
+  overflow: visable;
+}
+
+
+@media only screen and (max-width: 768px) {
+
+  .mobile-view {
+    display: block;
+  }
+
+  .open-link {
+    display: none;
+  }
 }
