--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,9 +15,6 @@ h3 {
   padding: 0;
 }
 
-.header-section {
-}
-
 .wave {
   padding-top: 0;
   width: 100%;
@@ -122,12 +119,18 @@ path.link.loss {
 
 iframe {
   border: 0;
-  overflow: visable;
+  width: 100%;
+  height: 900px;
+  overflow: hidden;
 }
 
 
 @media only screen and (max-width: 768px) {
 
+  iframe {
+    height: 500px;
+  }
+  
   .mobile-view {
     display: block;
   }
